--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">LotteryTicket</string>
+    <string name="toast_tz">请输入投注金额</string>
+    <string name="toast_wf">请选择玩法</string>
+    <string name="dialog_loading">加载中,请稍后...</string>
+
 </resources>
